--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "prettier": "^3.2.2"
   },
   "dependencies": {
+    "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.2",
     "@hapi/vision": "^7.0.3",
+    "dotenv": "^16.4.1",
     "handlebars": "^4.7.8",
     "uuid": "^9.0.1"
   }
