--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "handlebars": "^4.7.8",
     "joi": "^17.12.1",
     "lowdb": "^7.0.1",
+    "mongoose": "^8.1.1",
     "uuid": "^9.0.1"
   }
 }
