--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "WIT",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^1.6.7",
     "chai": "^5.0.3",
     "eslint": "^8.56.0",
     "eslint-config-airbnb-base": "^15.0.0",
