--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
     "@hapi/boom": "^10.0.1",
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.2",
+    "@hapi/inert": "^7.1.0",
     "@hapi/vision": "^7.0.3",
     "dotenv": "^16.4.1",
     "handlebars": "^4.7.8",
+    "hapi-swagger": "^17.2.1",
     "joi": "^17.12.1",
     "lowdb": "^7.0.1",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
