--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "lowdb": "^7.0.1",
+    "mais-mongoose-seeder": "^1.0.7",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
