--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
+    "build": "tsc",
+    "dev:tsc": "tsc --watch",
     "start": "node src/server.js",
     "dev": "nodemon src/server.js --ignore 'src/models/json/*.json'",
     "lint": "eslint . --ext .js",
@@ -15,6 +17,12 @@
   "author": "WIT",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.2",
+    "@types/hapi__cookie": "^12.0.5",
+    "@types/hapi__inert": "^5.2.10",
+    "@types/hapi__vision": "^5.5.8",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "axios": "^1.6.7",
     "chai": "^5.0.3",
     "eslint": "^8.56.0",
@@ -23,7 +31,8 @@
     "eslint-plugin-import": "^2.29.1",
     "mocha": "^10.2.0",
     "nodemon": "^3.1.0",
-    "prettier": "^3.2.2"
+    "prettier": "^3.2.2",
+    "typescript": "^5.4.5"
   },
   "dependencies": {
     "@hapi/boom": "^10.0.1",
