--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "leaflet": "^1.9.4",
     "mocha": "^10.2.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.2",
@@ -35,6 +36,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@hapi/boom": "^10.0.1",
     "@hapi/cookie": "^12.0.1",
     "@hapi/hapi": "^21.3.2",
@@ -42,6 +44,7 @@
     "@hapi/vision": "^7.0.3",
     "cloudinary": "^2.2.0",
     "dotenv": "^16.4.1",
+    "googlemaps": "^1.1.3",
     "handlebars": "^4.7.8",
     "hapi-auth-jwt2": "^10.5.1",
     "hapi-swagger": "^17.2.1",
